Revert "[ENG-17299] Fix tawk overlap lead form (#1922)" (#1953)
This reverts commit fd0b86a68959507cfd5bc5c2897e3512ad2ab93c.

--- a/src/components/RequestQuotePage/TellUsForm/TellUsForm.scss
+++ b/src/components/RequestQuotePage/TellUsForm/TellUsForm.scss
@@ -10,9 +10,6 @@
     }
   }
 
-  $tawk-z-index: 2000000000;
-  z-index: $tawk-z-index + 1;
-  position: relative;
   display: flex;
   background-color: $gray-5;
   flex-flow: column;
